# his-sik

./: .env  .env.example  FLEXIBLE_PATIENT_ID_FIX.md  INVOICE_PRESCRIPTION_GUIDE.md  Makefile  README.md  docker-compose.yml  schema.sql
be/: .env.example  .gitignore  Dockerfile  alembic.ini  nuke_db.py  pyproject.toml
be/backend/api/handlers/: auth_handler.py  base.py  clinic_handler.py  doctor_profile_handler.py  invoice_handler.py  lab_handler.py  medical_record_handler.py  patient_profile_handler.py  prescription_handler.py  profile_handler.py  referral_handler.py  staff_profile_handler.py  user_creation_handler.py  user_handler.py  visit_handler.py  wearable_handler.py
be/backend/api/middleware/: auth.py  auth_dto.py  rate_limiter.py  request_middleware.py  security_middleware.py
be/backend/api/routes/: auth_route.py  clinic_route.py  health_route.py  invoice_route.py  lab_route.py  medical_record_route.py  medicine_route.py  prescription_route.py  profile_route.py  referral_route.py  router.py  user_creation_route.py  user_route.py  visit_route.py  wearable_route.py
be/backend/api/server/: app.py
be/backend/infrastructure/config/: settings.py
be/backend/infrastructure/database/: connection.py  session.py
be/backend/infrastructure/logging/: logger.py
be/backend/infrastructure/security/: hmac_utils.py
be/backend/infrastructure/storage/: models.py  s3_service.py
be/backend/scripts/: seed.py
be/migrations/: env.py
be/migrations/versions/: 636563242073_initial.py  9344f44d7321_add_api_key_bypasser.py  e528f0b939f5_migrate_constraint.py
(+224 files in other folders)
